# Streamlit_Demo_Application

./: README.md  creds.json  csv_spec.yml  login_config.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  upload_csv.py
.streamlit/: secrets.toml
